Add:work in progress tutle in header in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>Work in Progress</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
