add main content in main section and style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>
         <h1>Work in Progress</h1>
     </header>
-    <main></main>
+    <main>
+        <p>Questo è il contenuto pricipale</p>
+    </main>
     <footer></footer>
 </body>
 
