add jumbotron with carousel

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
 <body>
     <header>
-        <h1>Work in Progress</h1>
+        <h1>my beatiful site</h1>
     </header>
     <main>
+        <div class="jumbotron">
+            carousel
+        </div>
         <p>Questo è il contenuto pricipale</p>
     </main>
     <footer></footer>
