add h3 to footer and style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <p>Questo è il contenuto pricipale</p>
     </main>
-    <footer></footer>
+    <footer>
+        <h3>Il mio footer</h3>
+    </footer>
 </body>
 
 </html>
