add:navigation and link's list in footer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     </main>
     <footer>
         <h3>Il mio footer</h3>
+        <nav>
+            <ul>
+                <li><a href="">nav-item</a></li>
+                <li><a href="">nav-item</a></li>
+                <li><a href="">nav-item</a></li>
+            </ul>
+        </nav>
+
     </footer>
 </body>
 
