update main section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <div class="jumbotron">
             carousel
         </div>
+        <section id="service">
+            <h3>I nostri servizi</h3>
+        </section>
+        <section id="team">
+            <h3>Il nostro team</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, omnis at dolorem eos, quod, iste neque
+                debitis officia aliquid consequatur harum hic perspiciatis dignissimos sequi porro ut cupiditate error
+                magnam?</p>
+        </section>
         <p>Questo è il contenuto pricipale</p>
     </main>
     <footer>
