update carousel class and text

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>My beatiful Website</h1>
     </header>
     <main>
-        <div class="jumbotron">
-            carousel
+        <div class="jumbotron fancy-jumbotron">
+            Meet our company
         </div>
         <section id="service">
             <h3>I nostri servizi</h3>
