update header title text from website to site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>My beatiful Website</h1>
+        <h1>My beatiful site</h1>
     </header>
     <main>
         <div class="jumbotron">
