update service and footer section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <div class="jumbotron fancy-jumbotron">
             Meet our company
         </div>
-        <section id="service">
+        <section id="service" class="secondary">
             <h3>I nostri servizi</h3>
+            <p>Pippo pluto e pippi calzzelunghe</p>
         </section>
         <section id="team">
             <h3>Il nostro team</h3>
@@ -29,7 +30,7 @@
         <p>Questo è il contenuto pricipale</p>
     </main>
     <footer>
-        <h3>Il mio footer</h3>
+        <h3>Il footer aggiornato</h3>
         <nav>
             <ul>
                 <li><a href="">nav-item</a></li>
